--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Oswald", sans-serif;
+    --fonte3: "Indie Flower", cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 html, body { 
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +31,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps; /* Comando para dar uma variação para a font, neste caso todas letras maiusculas mas com a primeira maior ainda. */
+    font-family: var(--fonte2);
+    font-size: 8vw;
 }
 
 header > p {
@@ -40,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em; /* Para espaçamento entre linhas. */
     padding: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -53,7 +69,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
