--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@ main {
     padding: 20px;
 }
 
-menu ul {
+nav ul {
     list-style-type: none;
     padding: 20px;
 }
 
-menu ul li {
+nav ul li {
     
 }
